6-outputs/0-create-ssh-security-groups.json
{
    "Resources": {
        "MyCompanyWideSSHSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable SSH access via port 22",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "10.0.48.0/24",
                        "FromPort": 22,
                        "IpProtocol": "tcp",
                        "ToPort": 22
                    },
                    {
                        "CidrIp": "10.0.112.0/24",
                        "FromPort": 22,
                        "IpProtocol": "tcp",
                        "ToPort": 22
                    },
                    {
                        "CidrIp": "10.0.176.0/24",
                        "FromPort": 22,
                        "IpProtocol": "tcp",
                        "ToPort": 22
                    }
                ]
            }
        }
    },
    "Outputs": {
        "StackSSHSecurityGroup": {
            "Description": "The SSH Security Group for our Company",
            "Value": {"Ref": "MyCompanyWideSSHSecurityGroup"},
            "Export": {"Name": "SSHSecurityGroup"}
        }
    }
}
